feat(category) : 카테고리 캐싱 반영, chore : 태그 설정 누락부분 추가