@@ -4,6 +4,7 @@ import com.fifteen.auction.domain.product.dto.request.ProductCategorySaveRequest
 import com.fifteen.auction.domain.product.dto.response.ProductCategoryTreeResponse;
 import com.fifteen.auction.domain.product.dto.response.ProductCategoryResponse;
 import com.fifteen.auction.domain.product.entity.ProductCategory;
+import com.fifteen.auction.domain.product.cache.ProductCacheRepository;
 import com.fifteen.auction.domain.product.repository.ProductCategoryRepository;
 import com.fifteen.auction.global.dto.error.ErrorCode;
 import com.fifteen.auction.global.dto.exception.ClientException;
@@ -11,6 +12,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -21,6 +23,7 @@ import java.util.stream.Collectors;
 public class ProductCategoryService {
 
     private final ProductCategoryRepository categoryRepository;
+    private final ProductCacheRepository productCacheRepository;
 
     public Long createCategory(ProductCategorySaveRequest request) {
         ProductCategory parent = null;
@@ -30,15 +33,30 @@ public class ProductCategoryService {
         }
 
         ProductCategory category = ProductCategory.create(request.getName(), parent);
-        return categoryRepository.save(category).getId();
+        Long id = categoryRepository.save(category).getId();
+
+        // ⬇ 저장 성공 후 캐시 무효화
+        productCacheRepository.evictCategoryList();
+        productCacheRepository.evictCategoryTree();
+        return id;
     }
 
     @Transactional(readOnly = true)
     public List<ProductCategoryResponse> findAll() {
-        return categoryRepository.findAll().stream()
-                .map(c -> ProductCategoryResponse.of(c.getId(), c.getName(),
-                        c.getParent() != null ? c.getParent().getId() : null))
-                .collect(Collectors.toList());
+        List<ProductCategoryResponse> cached = productCacheRepository.getCategoryList();
+        if (cached != null) return cached;
+
+        List<ProductCategoryResponse> categories = categoryRepository.findAll().stream()
+                .map(c -> ProductCategoryResponse.of(
+                        c.getId(),
+                        c.getName(),
+                        c.getParent() != null ? c.getParent().getId() : null
+                ))
+                .sorted(Comparator.comparing(ProductCategoryResponse::getName)) // or getSortOrder
+                .toList();
+
+        productCacheRepository.saveCategoryList(categories);
+        return categories;
     }
 
     @Transactional(readOnly = true)
@@ -47,11 +65,24 @@ public class ProductCategoryService {
                 .map(c -> ProductCategoryResponse.of(c.getId(), c.getName(), parentId))
                 .collect(Collectors.toList());
     }
+
     public void softDelete(Long categoryId) {
-        ProductCategory category = categoryRepository.findByIdAndDeletedAtIsNull(categoryId)
+        ProductCategory category = categoryRepository.findById(categoryId)
                 .orElseThrow(() -> new ClientException(ErrorCode.PRODUCT_CATEGORY_NOT_FOUND));
 
-        category.softDelete(); // deleted = true, deletedAt = now
+        if (category.isDeleted()) {
+            throw new ClientException(ErrorCode.CATEGORY_ALREADY_DELETED);
+        }
+
+        boolean hasChildren = categoryRepository.existsByParentIdAndDeletedAtIsNull(categoryId);
+        if (hasChildren) {
+            throw new ClientException(ErrorCode.CATEGORY_DELETE_FORBIDDEN);
+        }
+
+        category.softDelete();
+
+        productCacheRepository.evictCategoryList();
+        productCacheRepository.evictCategoryTree();
     }
 
     public void updateCategory(Long categoryId, ProductCategorySaveRequest request) {
@@ -61,22 +92,28 @@ public class ProductCategoryService {
         ProductCategory newParent = null;
         if (request.getParentId() != null) {
             newParent = categoryRepository.findByIdAndDeletedAtIsNull(request.getParentId())
-                    .orElseThrow(() -> new ClientException(ErrorCode.PRODUCT_CATEGORY_NOT_FOUND));
+                    .orElseThrow(() -> new ClientException(ErrorCode.INVALID_CATEGORY_PARENT));
         }
 
         category.update(request.getName(), newParent);
+
+        productCacheRepository.evictCategoryList();
+        productCacheRepository.evictCategoryTree();
     }
 
     @Transactional(readOnly = true)
     public List<ProductCategoryTreeResponse> getCategoryTree() {
+        List<ProductCategoryTreeResponse> cached = productCacheRepository.getCategoryTree();
+        if (cached != null) return cached;
+
         List<ProductCategory> allCategories = categoryRepository.findAllByDeletedAtIsNull();
 
-        // 1. parentId 기준으로 그룹핑 (null은 0L로 처리)
         Map<Long, List<ProductCategory>> grouped = allCategories.stream()
                 .collect(Collectors.groupingBy(c -> c.getParent() != null ? c.getParent().getId() : 0L));
 
-        // 2. 트리 구성 재귀 함수 실행
-        return buildTree(grouped, 0L);
+        List<ProductCategoryTreeResponse> tree = buildTree(grouped, 0L);
+        productCacheRepository.saveCategoryTree(tree);
+        return tree;
     }
 
     private List<ProductCategoryTreeResponse> buildTree(Map<Long, List<ProductCategory>> grouped, Long parentId) {
